wip: Fix Bar IsRightAlign menus & other tweaks

--- a/Source/Blazorise.Bootstrap/wwwroot/blazorise.bootstrap.css
+++ b/Source/Blazorise.Bootstrap/wwwroot/blazorise.bootstrap.css
@@ -7,6 +7,9 @@
 .nav .nav-link:hover {
     cursor: pointer; }
 
+.nav-item {
+    position: relative; }
+
 .btn-group > .b-tooltip:not(:last-child) > .btn {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0; }
